Remove background-color rules to fix overlap on project sharing

--- a/css/server/_apps.scss
+++ b/css/server/_apps.scss
@@ -105,10 +105,6 @@
 	.thumbnail {
 		color: var(--color-main-text);
 	}
-
-	#collection-list input:not([type="range"]) {
-		background-color: var(--color-main-background);
-	}
 }
 
 .tabHeaders .tabHeader {
